현재 CountFamilyActivity 부분에 다이얼로그 추가 및 오류 수정 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <!-- MainActivity 시작 -->
         <activity
             android:name=".MainActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
         </activity>
         <!-- MainActivity 끝 -->
