파이어베이스 회원가입, 로그인기능 추가 로그인 후 CountFamilyActivity 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,21 @@
             android:exported="true"
             android:screenOrientation="portrait"></activity>
 
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".PersonEdit"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".CountFamilyActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
         <!-- MainActivity 시작 -->
         <activity
             android:name=".MainActivity"
