기존 작업에 진행하던 구성원 추가 부분의 dialog 부분을 layout.xml로 대체 후 메인 화면 으로 넘어가는 작업까지 완료. 메인화면에서 툴바 부분에 구성원 layout 창 구성 필요

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
             android:exported="true">
         </activity>
         <!-- MainActivity 끝 -->
+
+        <activity
+            android:name=".PersonEdit"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
