비밀번호 재설정 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,19 +50,18 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
         </activity>
-        <!-- MainActivity 시작 -->
+
+        <activity android:name=".PasswordResetActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
         </activity>
-        <!-- MainActivity 끝 -->
 
-        <activity
-            android:name=".PersonEdit"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true">
-        </activity>
     </application>
 
 </manifest>
