카드뉴스 기능 구현 완료 / 장소별 사용량 UI 구현 완료 / 구성원별 사용량 UI 수정 필요

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,13 @@
             android:exported="true">
         </activity>
 
+
+        <activity
+            android:name=".TipActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
