--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,12 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".CheckUse"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
