메인화면 파이어베이스 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,20 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".UsedFamily"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".UserInfoActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
+
+
     </application>
 
 </manifest>
