--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,12 +70,6 @@
         </activity>
 
         <activity
-            android:name=".Testmb"
-            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true">
-
-        </activity>
-        <activity
             android:name=".CheckUse"
             android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
@@ -89,6 +83,12 @@
         </activity>
         <activity
             android:name=".UserInfoActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".GraphActivity"
             android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
 
