--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,12 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".BadgeActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
 
 
     </application>
